test/tests/compiler/10_file-scope_variables_and_storage-class_specifiers/invalid_parse/plx1_data_top_level_1.plx
data foo: i32 = 0

pub fn main(none) i32 {
    return foo
}
